--- a/procedure/code/01-R-markdown.Rmd
+++ b/procedure/code/01-R-markdown.Rmd
@@ -283,7 +283,7 @@ Human Development Index for each country was included in the causal models as a 
 
 At the beginning of this analysis, we had observed the dataset provided by Brodie et al with their publication. We noticed the following caveats in the script and raw data shared by the original study.
 1) HDI was missing.
-2) The process of computing biodiversity metrics and GEDI metrics was unclear.
+2) The process of computing biodiversity metrics, GEDI metrics, and the circuit-based accessibility metric was unclear.
 3) The procedure for preprocessing and cleaning PA boundaries was unclear.
 
 We did not manipulate the data before beginning our reproduction attempt. 
@@ -297,9 +297,7 @@ Given the research design as described in the original paper and primary data sh
 
 ## Data transformations
 
-We did the following data transformations:
-
-1) Cleaned up PAs
+We performed a series of data pre-processing steps before building the causal models, which include 1) cleaning protected area boundaries, 2) re-construcitng the causla diagram, and 3) cleeaning up data files produced by Brodie et al. (2023).
 
 ### Clean protected areas (takes too long to run so I skipped many lines --> should discuss)
 
@@ -862,6 +860,8 @@ mod_SR_efficacy_bird <- lme(SR.mean ~ forest_structure + access_log10.z
 
 ### Mammal models
 
+We run PD, FR, and SR models for mammals.
+
 ```{r mammal_models, echo=T, message=FALSE}
 # ----------------- Analysis of phylogenetic diversity (PD) --------------------
 dat_PD_efficacy_mam <- subset(dat_clean_mam, med_dist == 100)
@@ -1000,3 +1000,4 @@ The authors of this preregistration state that they completed this preregistrati
 This report is based upon the template for Reproducible and Replicable Research in Human-Environment and Geographical Sciences, DOI:[10.17605/OSF.IO/W29MQ](https://doi.org/10.17605/OSF.IO/W29MQ)
 
 # References
+Brodie, J.F., Mohd-Azlan, J., Chen, C. et al. Landscape-scale benefits of protected areas for tropical biodiversity. Nature 620, 807–812 (2023). <https://doi.org/10.1038/s41586-023-06410-z>
